--- a/style.css
+++ b/style.css
@@ -2857,3 +2857,8 @@ p.comment-form-comment {
 #ie8 section.featured-post .attachment-small-feature {
 	max-width: none;
 }
+body {
+    margin: 100px;
+    padding: 100px;
+}
+
